tests/errors/compiler/act_param_not_ident/call_t_create.c
int main()
{
	int a;
	t_create();
	return 0;
}